fix: Ajusta tipo de logger
