# src/infrastructure/controllers/campaign_controller.go
@@ -19,23 +19,25 @@ type CampaignController struct {
 // @Produce json
 // @Param body body dto.CreateCampaignDTO true "Body data"
 // @Success 201 {object} dto.CampaignCreatedDTO
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
 // @Router /campaigns [post]
 func (s *CampaignController) Create(ctx *gin.Context) {
 	var createCampaignDTO dto.CreateCampaignDTO
 
 	if err := ctx.ShouldBindJSON(&createCampaignDTO); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-			"id":    "bad_request",
+		ctx.JSON(http.StatusBadRequest, errorResponse{
+			Message: err.Error(),
+			ID:      "bad_request",
 		})
 		return
 	}
 
 	campaignCreated, err := s.CreateCampaignUC.Execute(createCampaignDTO)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-			"id":    "unexpected_error",
+		ctx.JSON(http.StatusInternalServerError, errorResponse{
+			Message: err.Error(),
+			ID:      "unexpected_error",
 		})
 	}
 
