# src/infrastructure/controllers/reward_controller.go
@@ -21,32 +21,34 @@ type RewardController struct {
 // @Param store_id path int true "Store ID"
 // @Param body body dto.CreateRewardDTO true "Body data"
 // @Success 201 {object} dto.RewardCreatedDTO
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
 // @Router /stores/{store_id}/rewards [post]
 func (s *RewardController) Create(ctx *gin.Context) {
 	var createRewardDTO dto.CreateRewardDTO
 
 	if err := ctx.ShouldBindJSON(&createRewardDTO); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-			"id":    "bad_request",
+		ctx.JSON(http.StatusBadRequest, errorResponse{
+			Message: err.Error(),
+			ID:      "bad_request",
 		})
 		return
 	}
 
 	param, found := ctx.Params.Get("store_id")
 	if !found {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": "el parámetro store_id es requerido",
-			"id":    "bad_request_error",
+		ctx.JSON(http.StatusBadRequest, errorResponse{
+			Message: "el parámetro store_id es requerido",
+			ID:      "bad_request_error",
 		})
 		return
 	}
 
 	storeID, err := strconv.Atoi(param)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": "el parámetro store_id debe ser un un numero entero",
-			"id":    "bad_request_error",
+		ctx.JSON(http.StatusBadRequest, errorResponse{
+			Message: "el parámetro store_id debe ser un un numero entero",
+			ID:      "bad_request_error",
 		})
 		return
 	}
@@ -55,9 +57,9 @@ func (s *RewardController) Create(ctx *gin.Context) {
 
 	rewardCreated, err := s.CreateRewardUC.Execute(createRewardDTO)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-			"id":    "unexpected_error",
+		ctx.JSON(http.StatusInternalServerError, errorResponse{
+			Message: err.Error(),
+			ID:      "unexpected_error",
 		})
 	}
 
