# src/infrastructure/controllers/store_controller.go
@@ -19,23 +19,25 @@ type StoreController struct {
 // @Produce json
 // @Param body body dto.CreateStoreDTO true "Body data"
 // @Success 201 {object} dto.StoreCreatedDTO
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
 // @Router /stores [post]
 func (s *StoreController) Create(ctx *gin.Context) {
 	var createStoreDTO dto.CreateStoreDTO
 
 	if err := ctx.ShouldBindJSON(&createStoreDTO); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-			"id":    "bad_request",
+		ctx.JSON(http.StatusBadRequest, errorResponse{
+			Message: err.Error(),
+			ID:      "bad_request",
 		})
 		return
 	}
 
 	store, err := s.CreateStoreUC.Execute(createStoreDTO)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-			"id":    "unexpected_error",
+		ctx.JSON(http.StatusInternalServerError, errorResponse{
+			Message: err.Error(),
+			ID:      "unexpected_error",
 		})
 	}
 
